--- a/task1.8
+++ b/task1.8
@@ -1,6 +1,6 @@
 #!/bin/bash
 echo "Процессов пользователя:"
-ps aux | grep $student | wc -l
+ps aux | grep $USER | wc -l
 echo "Процессов пользователя root:"
 ps aux | grep root | wc -l
 
